<resources>
    <string name="app_name">Attentra</string>
    <string name="title_activity_company_index">Institutes</string>
    <string name="title_activity_track_store">Send Signal</string>
    <string name="title_activity_user_home">Main Page</string>
    <string name="title_activity_user_register">UserRegister</string>
    <string name="title_activity_aboutus">AboutUS</string>
    <string name="title_activity_track_list">Tracking</string>
    <string name="title_activity_user_login">Sign in</string>
    <string name="title_activity_home">Attentra</string>
    <string name="title_activity_checkin">Check In / Out</string>
    <string name="title_activity_company_add_member">Add New Member</string>
    <string name="title_activity_company_user_list">List Of Users</string>
    <string name="title_activity_company_edit">Edit Institute</string>
    <string name="title_activity_mission_index">Missions List</string>
    <string name="title_activity_mission_add">Add New Mission</string>
    <string name="title_activity_mission_edit">Edit Mission</string>
    <string name="title_activity_track_index">Track List</string>
    <string name="title_activity_company_add">Add New Institute</string>
    <string name="title_activity_mission_users">List of Users in Missions</string>
    <string name="title_activity_attendance">Attendances</string>
    <string name="title_activity_attendance_store">Store New Attendance Manually</string>
    <string name="title_activity_attendance_edit">Edit Manually</string>
    <string name="title_activity_Modules">Modules</string>
    <string name="title_activity_user_change_password">Change Password</string>
    <string name="title_activity_payments">List of Your Payments</string>
    <string name="title_activity_payment_add">Increase Balance</string>
    <string name="title_activity_Module_purch">Purchase New Module</string>
    <string name="title_activity_attendance_store_self_location">Location Based Roll Call</string>
    <string name="btn_LogIn">Log In</string>
    <string name="btn_LogOut">Log Out</string>
    <string name="btn_Register">Register</string>
    <string name="btn_Exit">Exit</string>
    <string name="btn_AboutUs">About Us</string>
    <string name="btn_Profile">Profile</string>
    <string name="btn_CheckIn">Check In / Out</string>
    <string name="btn_GPSTrackingStart">Start GPS Tracker</string>
    <string name="btn_Companies">Institutes</string>
    <string name="btn_Settings">Settings</string>
    <string name="btn_Payments">Payments</string>
    <string name="btn_Purchase">Purchase</string>
    <string name="btn_AttendanceList">Attendance List</string>
    <string name="btn_Share">Share</string>
    <string name="btn_Rate">Rate us</string>
    <string name="btn_OtherProducts">Other Programs</string>
    <string name="btn_OK">OK</string>
    <string name="btn_Stop">Stop</string>
    <string name="btn_Start">Start</string>
    <string name="btn_Minimize">Minimize</string>
    <string name="btn_Download">Download</string>
    <string name="btn_Tutorial">Tutorial</string>
    <string name="btn_LocationCheckIn">Location Based Check In / Out</string>
    <string name="btn_Reports">Reports</string>
    <string name="btn_Attendance_Store_Self_Location">Roll Call in/out</string>
    <string name="btn_AllowSelfRoll">Allow Self Roll-Call</string>
    <string name="btn_DisallowSelfRoll">Disallow Self Roll-Call</string>
    <string name="chk_trackingNotificationSound">Tracking Notification Sound</string>
    <string name="chk_checkInOutMerge">Check In/Out simultaneously</string>
    <string name="et_Email">Email</string>
    <string name="et_UserName">UserName</string>
    <string name="et_Password">Password</string>
    <string name="et_RepPassword">Repeat Pass.</string>
    <string name="dlg_Yes">Yes</string>
    <string name="dlg_No">No</string>
    <string name="dlg_msg_Exit">Are You Sure?</string>
    <string name="dlg_Wait">Please Wait...</string>
    <string name="dlg_OperationSuccess">Operation Successful</string>
    <string name="dlg_OperationFail">Operation Failed</string>
    <string name="prompt_user_name">UserName</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_undefined">Undefined</string>
    <string name="error_user_exist">User already exist</string>
    <string name="error_item_exist">Item already exist</string>
    <string name="error_register_fail">Register failed</string>
    <string name="error_insert_fail">Insert failed</string>
    <string name="error_login_fail">Wrong username or password</string>
    <string name="error_token_mismach">Token mismach</string>
    <string name="error_defective_information">Defective information</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_token_blacklisted">Token is blacklisted</string>
    <string name="error_company_exist">Institute already exist</string>
    <string name="error_company_store">Institute store fail</string>
    <string name="error_module_expire">Module has been expired</string>
    <string name="error_invalid_file_size">Invalid file size</string>
    <string name="error_track_store">Error in storing coordinates</string>
    <string name="error_update_fail">Update failed</string>
    <string name="error_unauthorized_user">Unauthorized user</string>
    <string name="error_delete_fail">Delete failed</string>
    <string name="error_operation_fail">Operation failed</string>
    <string name="error_no_change_found">Nothing has been changed</string>
    <string name="error_track_index">Error in getting list of coordinates</string>
    <string name="error_track_list">Error in getting user tracking info</string>
    <string name="error_mismatch_password">Passwords does not match</string>
    <string name="error_item_not_exist">Item does not exist</string>
    <string name="error_not_enough_charge">Not enough charge</string>
    <string name="error_auth_fail">Authentication failed, please login again</string>
    <string name="error_wrong_phone_code">Unregistered phone</string>
    <string name="error_invalid_piblic_key">Invalid key</string>
    <string name="error_term_of_use">Please agree with the terms of use</string>
    <string name="error_user_name_short">User name is too short</string>
    <string name="error_user_canceled">User Canceled the Operation</string>
    <string name="msg_OperationSuccess">Operation Successful</string>
    <string name="msg_OperationFail">Operation Failed</string>
    <string name="msg_OperationError">Operation Error</string>
    <string name="msg_MessageNotSpecified">Undefined</string>
    <string name="msg_MessageHeadToWebSite">Currently, This feature is only accessible in website.</string>
    <string name="msg_ConnectionError">Error in connecting to server</string>
    <string name="msg_GoogleServicesError">Please install google services</string>
    <string name="msg_CheckInOperationSuccess">User Checked In Successfully</string>
    <string name="msg_CheckOutOperationSuccess">User Checked Out Successfully</string>
    <string name="msg_CheckInOutOperationSuccess">User Checked In And Out Successfully</string>
    <string name="msg_ImportantNotice">Important Notice</string>
    <string name="msg_OldVersion">There a new version of this app available - for download visit www.attentra.ir</string>
    <string name="msg_VersionExpired">There a new version of this app available</string>
    <string name="msg_InProgress">In Progress...</string>
    <string name="msg_EyeClick">Click on eye above for start tracking</string>
    <string name="msg_AppExited">You Exited from Program!!</string>
    <string name="msg_PhoneCodeRegisterOk">You registered Your phone  successfully</string>
    <string name="msg_TrackNotification">Touch here to enter the app</string>
    <string name="msg_PressBackAgain">Please click BACK again to exit</string>
    <string name="msg_InternetNotAvailable">Internet connection is not available</string>
    <string name="msg_TermsOfService">I agree with the terms of service</string>
    <string name="msg_PaymentBazarOperationSuccessful">Operation Successful</string>
    <string name="msg_PaymentZarinPalBelowSilverLevel">User level is below silver level</string>
    <string name="msg_PaymentZarinPalDefectiveInformation">Defective information</string>
    <string name="msg_PaymentZarinPalCanNotEditRequest">Can not edit request</string>
    <string name="msg_PaymentZarinPalFinancialOperationNotFind">Financial operation not find</string>
    <string name="msg_PaymentZarinPalIdValidationTime">Id validation time error</string>
    <string name="msg_PaymentZarinPalIncorrectAdditionalData">Incorrect Additional Data</string>
    <string name="msg_PaymentZarinPalIncorrectIpOrMerchantCode">Incorrect Authorization information</string>
    <string name="msg_PaymentZarinPalMethodAccessNotAllowed">Access method error</string>
    <string name="msg_PaymentZarinPalOperationSuccessful">Operation successful</string>
    <string name="msg_PaymentZarinPalOperationSuccessfulPaymentVerificationAlredyDone">Operation successful and payment verification alredy done</string>
    <string name="msg_PaymentZarinPalRequestArchived">Request is archived</string>
    <string name="msg_PaymentZarinPalRequestNotFind">Request is not find</string>
    <string name="msg_PaymentZarinPalShaparakRestrictionPayment">Shaparak restriction in payment value</string>
    <string name="msg_PaymentZarinPalTransactionCountExceeded">Transaction time is exceeded</string>
    <string name="msg_PaymentZarinPalTransactionFailed">Transaction failed</string>
    <string name="msg_PaymentZarinPalTransactionPaymentMismatch">Transaction and payment mismatch</string>
    <string name="msg_term_of_use">read</string>
    <string name="msg_compelete_information">please complete your personal information via settings section</string>
    <string name="msg_company_not_exist">No registered institute</string>
    <string name="msg_PaymentUndefinedError">Undefined error</string>
    <string name="msg_InNextVersions">available in future versions</string>
    <string name="msg_InWebSystem">available in web based system</string>
    <string name="msg_location_not_in_zone">Your current location is not in determined zone</string>
    <string name="msg_InWebSystemForNow">available in web based system for now</string>
    <string name="msg_ErrorUserNotAllowedToSelfRoll">User is not allowed to self roll</string>
    <string name="msg_ErrorCompanyZoneIsNotSet">Company zone is not defined</string>
    <string name="msg_Experimental">Experimental...</string>
    <string name="msg_LocationAccessDenied">Location access denied!!</string>
    <string name="msg_CameraAccessDenied">Camera access denied!!</string>
    <string name="enter_company_name_here">Institute Name:</string>
    <string name="register_company">Register Institute</string>
    <string name="btn_Modules">Modules</string>
    <string name="et_Country">Country</string>
    <string name="Type">Type:</string>
    <string name="Name">Name:</string>
    <string name="Family">Family:</string>
    <string name="Gender">Gender:</string>
    <string name="userName">User Name</string>
    <string name="Email">Email:</string>
    <string name="Code">Code:</string>
    <string name="Description">Description</string>
    <string name="Amount">Amount:</string>
    <string name="Price">Price(Toman):</string>
    <string name="Purch">Purchase</string>
    <string name="Communicate">Communicate</string>
    <string name="forgetPassword">Forget Password</string>
</resources>