<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/button_03"
    android:padding="10dp"
    android:orientation="vertical">

    <!--profile-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/male"
                android:id="@+id/avatar_iv_dd"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

    </LinearLayout>
    <!--fills-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="10"
            android:id="@+id/userType_sp_dd"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="10"
            android:id="@+id/Name_et_dd"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="10"
            android:id="@+id/Family_et_dd"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:background="@drawable/button_02"
            android:id="@+id/Gender_sp_dd" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="10"
            android:id="@+id/userName_et_dd"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="7"
            android:textSize="10dp"
            android:id="@+id/Email_et_dd"
            android:layout_weight="0.7" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_02"
            android:ems="10"
            android:id="@+id/Code_et_dd"
            android:layout_weight="0.7" />
    </LinearLayout>
</LinearLayout>
