<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_user_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ir.fardan7eghlim.attentra.views.user.UserHomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <TextView
                    android:text="@string/et_UserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <EditText
                    android:id="@+id/et_UserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_02"
                    android:inputType="textPersonName"
                    android:text=""
                    android:ems="10"
                    android:layout_weight="0.7" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <TextView
                    android:text="@string/et_Email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_02"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:ems="10"
                    android:layout_weight="0.7" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_marginTop="4dp"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/et_Country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/button_02"
                    android:id="@+id/countries_sp_ur" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <TextView
                    android:text="@string/et_Password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_02"
                    android:inputType="textPassword"
                    android:text=""
                    android:ems="10"
                    android:layout_weight="0.7" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <TextView
                    android:text="@string/et_RepPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
                <EditText
                    android:id="@+id/et_RepPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_02"
                    android:inputType="textPassword"
                    android:text=""
                    android:ems="10"
                    android:layout_weight="0.7" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_TermsOfService"
                />
            <TextView
                android:id="@+id/tv_term_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_term_of_use"/>
            <Button
                android:id="@+id/btn_Register"
                android:text="@string/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:background="@drawable/button_02"
                android:layout_centerHorizontal="true"
                android:minWidth="150dp"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
